# AhoCorasick

./: CMakeLists.txt
include/: ahocorasick.h
src/: ahocorasick.c  main.c
tests/: test_original.c  test_wikipedia.c
